<resources>
    <string name="app_name">Learn</string>
    
    <!-- Strings related to login -->
    <string name="account_number">帐号</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="register_underline"><u>没有帐号？</u></string>
    <string name="phone_number">手机号</string>
    <string name="security_code">验证码</string>
    <string name="reget_security_code">重新获取</string>
    <string name="get_security_code">获取验证码</string>
    <string name="password">密码</string>
    <string name="password_format">密码（4～20）</string>
    <string name="nick_optional">昵称（可选）</string>
    <string name="other_method">其他方式</string>
    <string name="error_null_account">请输入帐号</string>
    <string name="error_null_password">请输入密码</string>
    <string name="error_invalid_password">密码长度：4～20个字符</string>
    <string name="error_null_phone_number">请输入手机号</string>
    <string name="error_invalid_phone_number">无效的手机号码</string>
    <string name="error_null_security_code">请输入验证码</string>
    <string name="error_error_security_code">验证码不正确</string>
    <string name="error_get_security_code">请获取验证码</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
